Minor clarity changes

--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,7 @@
 </head>
 
 <body>
-    <h1>Burtavle-notifikationer</h1>
+    <h1>Burtavle-Notifikationer</h1>
     <div class="container active" id="loading">
         <p>Henter data... Lige et øjeblik...</p>
     </div>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="container" id="unsubscribe">
-        <p>Du er allerede subscribed! Hvis du vil afmelde eller ændre dine indstillinger, så tryk Unsubscribe.</p>
+        <p>Du er subscribed! Hvis du vil afmelde eller ændre dine indstillinger, så tryk Unsubscribe.</p>
 
         <button class="unsub" onclick="unsubscribe()">Unsubscribe</button>
     </div>
